lobby.html text align fixed

--- a/css/books.css
+++ b/css/books.css
@@ -38,7 +38,7 @@ section{
     max-width: 40%;
 }
 img{
-    max-width: 150px;
+    max-width: 200px;
     max-height: auto;
 }
 footer{
