--- a/css/lobby.css
+++ b/css/lobby.css
@@ -6,6 +6,11 @@
             text-align: left;
             font-family: Arial, Helvetica, sans-serif;
         }
+        h1,p{
+            text-align: left;
+            padding-left: 100px;
+            font-size: 60px;
+        }
         .list{
             list-style-type: none;
             line-height: 3;
